# thesis_docs

./: .gitignore  bahdanau_big.sbatch  bahdanau_small.sbatch  bmshj2018_memory.py  checkpoint.pth.tar  copy_images.py  cropping_hrsc.py  ds_load_trial.py  esa_image.tif  github-token  google.py  initial_forward.txt  metadata.py  metadata_kodak.py  model_params.txt  pyproject.toml  requirements.txt  results.json  results.p  results_2.json  results_total.json  sh ra42tif2@login.ai.lrz.de  test.sbatch  vailla_small.sbatch  vanilla_big.sbatch  vanilla_small.sbatch
experiments/: analyze_results.py  detection_segmentation.py  exp1_heatmap.py  ml_exp.py  ml_single_mask.py  rd_curves.py  sam2_trial.py  samgeo_auto.py  samgeo_pointprompt.py  samgeo_trial.py  visualize_patches.py
images/: bigearth2.tif
jobs_v2/: b2_24k.sbatch  b2_32k.sbatch  bv2_128k.sbatch  bv2_24k.sbatch  bv2_big.sbatch  bv2_k12.sbatch  bv2_k8.sbatch  bv2_k96.sbatch
miscellanious/: wandb-key
sbatch_jobs/: bahdanau_big.sbatch  bahdanau_small.sbatch  bahdanau_vary_k.sbatch  high_lambda_bahdanau_big.sbatch  high_lambda_bahdanau_small.sbatch  high_lambda_vanilla_big.sbatch  high_lambda_vanilla_small.sbatch  lambda_0001_bb.sbatch  lambda_0001_bv.sbatch  lambda_0001_sb.sbatch  lambda_0001_sv.sbatch  lambda_003_bb.sbatch  lambda_003_bv.sbatch  lambda_003_sb.sbatch  lambda_003_sv.sbatch  lambda_01_bb.sbatch  lambda_01_bv.sbatch  lambda_01_sb.sbatch  lambda_01_sv.sbatch  lambda_1_bb.sbatch  lambda_1_bv.sbatch  lambda_1_sb.sbatch  lambda_1_sv.sbatch  lambda_3_bb.sbatch  lambda_3_bv.sbatch  lambda_3_sb.sbatch  (+12 more)
(+87 files in other folders)
