[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressai>=1.2.8",
    "datasets>=4.4.1",
    "h5py>=3.15.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "numcodecs>=0.16.5",
    "openimages>=0.0.1",
    "pympler>=1.1",
    "pytorch-ignite>=0.5.3",
    "rasterio>=1.4.3",
    "rshf>=0.1.9",
    "spectral>=0.24",
    "tifffile>=2025.10.16",
    "torch>=2.9.1",
    "torchac>=0.9.3",
    "torchmetrics[image]>=1.8.2",
    "torchvision>=0.24.1",
    "wandb>=0.25.0",
    "xarray>=2026.2.0",
    "zarr==2.18.0",
]
